# ac-server-manager

./: .aws-credentials.example  .gitignore  CONTRIBUTING.md  CREATE_PR_INSTRUCTIONS.md  EXAMPLES.md  LICENSE  PROJECT_SUMMARY.md  README.md  SUMMARY.md  pyproject.toml  requirements.txt
docs/: AC_WRAPPER_INTEGRATION.md  README_FULL.md
scripts/: generate_cm_pack.py
src/ac_server_manager/: __init__.py  cli.py  config.py  deployer.py  ec2_manager.py  iam_manager.py  s3_manager.py
tests/: test_assettoserver_deployment.py  test_cli.py  test_config.py  test_deployer.py  test_ec2_manager.py  test_iam_manager.py  test_s3_manager.py  test_validation_script.py
